--- a/Jal.RestClient.LightInject.Installer/Jal.RestClient.LightInject.Installer.csproj
+++ b/Jal.RestClient.LightInject.Installer/Jal.RestClient.LightInject.Installer.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Authors>Raul Naupari</Authors>
-    <Version>1.6.2</Version>
+    <Version>1.6.3</Version>
     <Company>Raul Naupari</Company>
     <Description>LightInject installer for the Jal.RestClient library</Description>
     <Copyright />
@@ -11,6 +11,7 @@
     <PackageProjectUrl>https://github.com/raulnq/Jal.RestClient</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
