--- a/Jal.RestClient.Tests/packages.config
+++ b/Jal.RestClient.Tests/packages.config
@@ -1,14 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.2.0" targetFramework="net45" />
-  <package id="Castle.Windsor" version="4.1.0" targetFramework="net45" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net47" />
+  <package id="Castle.Windsor" version="5.0.0" targetFramework="net47" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
-  <package id="Jal.HttpClient" version="2.1.4" targetFramework="net45" />
-  <package id="Jal.HttpClient.Installer" version="2.1.2" targetFramework="net45" />
-  <package id="Jal.HttpClient.Logger" version="2.1.1" targetFramework="net45" />
-  <package id="Jal.HttpClient.Logger.Installer" version="2.1.1" targetFramework="net45" />
+  <package id="Jal.ChainOfResponsability" version="1.0.1" targetFramework="net47" />
+  <package id="Jal.ChainOfResponsability.Installer" version="1.0.1" targetFramework="net47" />
+  <package id="Jal.HttpClient" version="2.1.9" targetFramework="net47" />
+  <package id="Jal.HttpClient.Common.Logging" version="1.0.2" targetFramework="net47" />
+  <package id="Jal.HttpClient.Common.Logging.Installer" version="1.0.3" targetFramework="net47" />
+  <package id="Jal.HttpClient.Installer" version="2.1.5" targetFramework="net47" />
+  <package id="Jal.Locator" version="1.1.1" targetFramework="net47" />
+  <package id="Jal.Locator.CastleWindsor" version="1.1.1" targetFramework="net47" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net45" />
-  <package id="Shouldly" version="3.0.0" targetFramework="net45" />
+  <package id="Shouldly" version="3.0.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.Caching" version="4.5.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
 </packages>
