--- a/Jal.RestClient/Jal.RestClient.csproj
+++ b/Jal.RestClient/Jal.RestClient.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Authors>Raul Naupari</Authors>
-    <Version>1.6.4</Version>
+    <Version>1.6.5</Version>
     <Company>Raul Naupari</Company>
     <Description>Just another library to call REST web services</Description>
     <Copyright />
@@ -11,10 +11,11 @@
     <PackageProjectUrl>https://github.com/raulnq/Jal.RestClient</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jal.HttpClient" Version="2.1.4" />
+    <PackageReference Include="Jal.HttpClient" Version="2.1.9" />
   </ItemGroup>
   
 </Project>
