--- a/Jal.RestClient.Json/Jal.RestClient.Json.csproj
+++ b/Jal.RestClient.Json/Jal.RestClient.Json.csproj
@@ -3,15 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.7.2</Version>
+    <Version>2.0.0</Version>
     <Company>Raul Naupari</Company>
     <Description>Json serializer/deserializer for the Jal.RestClient library</Description>
     <Copyright />
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/raulnq/Jal.RestClient</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl />
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
