--- a/Jal.RestClient.LightInject.Installer/Jal.RestClient.LightInject.Installer.csproj
+++ b/Jal.RestClient.LightInject.Installer/Jal.RestClient.LightInject.Installer.csproj
@@ -3,19 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.7.2</Version>
+    <Version>2.0.0</Version>
     <Company>Raul Naupari</Company>
     <Description>LightInject installer for the Jal.RestClient library</Description>
     <Copyright />
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/raulnq/Jal.RestClient</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl />
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LightInject" Version="6.2.0" />
+    <PackageReference Include="Jal.HttpClient.LightInject.Installer" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
