--- a/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer.csproj
+++ b/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer.csproj
@@ -4,12 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Microsoft.Extensions.DependencyInjection installer for the Jal.RestClient library</Description>
     <Authors>Raul Naupari</Authors>
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.0.0</Version>
+    <PackageLicenseUrl />
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Jal.HttpClient.Microsoft.Extensions.DependencyInjection.Installer" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
