--- a/Jal.RestClient/Jal.RestClient.csproj
+++ b/Jal.RestClient/Jal.RestClient.csproj
@@ -3,19 +3,19 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.7.2</Version>
+    <Version>2.0.0</Version>
     <Company>Raul Naupari</Company>
-    <Description>Just another library to call REST web services</Description>
+    <Description>Just another library to call REST APIs</Description>
     <Copyright />
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/raulnq/Jal.RestClient</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jal.HttpClient" Version="2.2.8" />
+    <PackageReference Include="Jal.HttpClient" Version="3.1.0" />
   </ItemGroup>
   
 </Project>
