--- a/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer.csproj
+++ b/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer/Jal.RestClient.Microsoft.Extensions.DependencyInjection.Installer.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Microsoft.Extensions.DependencyInjection installer for the Jal.RestClient library</Description>
     <Authors>Raul Naupari</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <PackageLicenseUrl />
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jal.HttpClient.Microsoft.Extensions.DependencyInjection.Installer" Version="3.1.0" />
+    <PackageReference Include="Jal.HttpClient.Microsoft.Extensions.DependencyInjection.Installer" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
