--- a/Jal.RestClient.Tests/Jal.RestClient.Tests.csproj
+++ b/Jal.RestClient.Tests/Jal.RestClient.Tests.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Common.Logging" Version="3.4.1" />
-    <PackageReference Include="Jal.HttpClient.Common.Logging.Installer" Version="3.1.0" />
+    <PackageReference Include="Jal.HttpClient.Common.Logging" Version="3.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
